--- a/amplify.yml
+++ b/amplify.yml
@@ -6,9 +6,9 @@ frontend:
         - npm ci
     build:
       commands:
-        - npm run build && npm run export
+        - npm run build
   artifacts:
-    baseDirectory: out
+    baseDirectory: .next
     files:
       - '**/*'
   cache:
